// Vitest Snapshot v1

exports[`Spacing Constants > constant snapshot 1`] = `
{
  "breakPoints": {
    "large": 1199,
    "largeOnly": [
      1024,
      1199,
    ],
    "medium": 1023,
    "mediumOnly": [
      640,
      1023,
    ],
    "smallOnly": 639,
    "xlarge": 1439,
    "xlargeOnly": [
      1200,
      1439,
    ],
    "xxlarge": 1920,
  },
  "checkIsCSSLength": [Function],
  "getSafeGutter": [Function],
  "getSizeValue": [Function],
  "getSpacingValue": [Function],
  "mergeBreakpoints": [Function],
  "sizes": {
    "large": "1199px",
    "medium": "1023px",
    "small": "639px",
    "xlarge": "1439px",
    "xsmall": "319px",
    "xxlarge": "1920px",
    "xxsmall": "159px",
  },
  "spacing": {
    "lg": "1rem",
    "lgXl": "1.5rem",
    "md": "0.5rem",
    "mdLg": "0.75rem",
    "none": "0px",
    "sm": "0.25rem",
    "xl": "2rem",
    "xlXXl": "3rem",
    "xs": "0.125rem",
    "xxl": "4rem",
    "xxs": "0.0625rem",
  },
  "validateGutter": [Function],
  Symbol(Symbol.toStringTag): "Module",
}
`;

exports[`Spacing Constants > does not break if called with no object 1`] = `
{
  "large": 1199,
  "largeOnly": [
    1024,
    1199,
  ],
  "medium": 1023,
  "mediumOnly": [
    640,
    1023,
  ],
  "smallOnly": 639,
  "xlarge": 1439,
  "xlargeOnly": [
    1200,
    1439,
  ],
  "xxlarge": 1920,
}
`;

exports[`Spacing Constants > merges breakpoints 1`] = `
{
  "large": 1199,
  "largeOnly": [
    1024,
    1199,
  ],
  "medium": 1023,
  "mediumOnly": [
    640,
    1023,
  ],
  "smallOnly": 639,
  "xlarge": "1300px",
  "xlargeOnly": [
    1200,
    1439,
  ],
  "xxlarge": 1920,
}
`;
